--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>PageTitle</title>
+    <title>Future Home Of Legacy Concrete, LLC.</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -57,6 +57,9 @@
     <main class="flex-shrink-0">
        <div class="container">
            <h1 class="mt-5">Template with dark fixed navbar and sticky footer</h1>
+           <div class="img-fluid">
+            <img src="img/construction.jfif">
+           </div>
            <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with padding-top: 60px; on the main > .container.</p>
        </div>
     </main>
