--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Fixed navbar</a>
+        <a class="navbar-brand" href="#">Legacy Concrete, LLC</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,13 +41,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link 1</a>
+                    <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link 2</a>
+                    <a class="nav-link" href="#">Our Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link 3</a>
+                    <a class="nav-link" href="#">Contact Us</a>
                 </li>
             </ul>
         </div>
@@ -56,16 +56,16 @@
 
     <main class="flex-shrink-0">
        <div class="container">
-           <h1 class="mt-5">Template with dark fixed navbar and sticky footer</h1>
+           <h1 class="mt-5">We are Legacy Concrete, LLC.</h1>
            <div class="img-fluid">
             <img src="img/construction.jfif">
            </div>
-           <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with padding-top: 60px; on the main > .container.</p>
+           <p class="lead">The future home of Legacy Concrete, LLC.</p>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-light sticky-footer">
         <div class="container-fluid text-center">
-            <span class="text-muted">Place sticky footer content here.</span>
+            <span class="text-muted">©QuickdrawTechnologies, 2021</span>
         </div>
     </footer>
     <!-- Bootstrap JS -->
