--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
     <main class="flex-shrink-0">
        <div class="container">
            <h1 class="mt-5">We are Legacy Concrete, LLC.</h1>
-           <div class="img-fluid">
-            <img src="img/construction.jfif">
+           <div>
+           <img src="img/construction.jfif" class="img-fluid" alt="Image">
            </div>
            <p class="lead">The future home of Legacy Concrete, LLC.</p>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-light sticky-footer">
         <div class="container-fluid text-center">
-            <span class="text-muted">©QuickdrawTechnologies, 2021</span>
+            <span class="text-muted">©Quickdraw Technologies, 2021</span>
         </div>
     </footer>
     <!-- Bootstrap JS -->
